--- a/Curriculum_Vitae_Template/resume.tex
+++ b/Curriculum_Vitae_Template/resume.tex
@@ -135,150 +135,124 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{\href{http://changh95.github.io}{\Large Your Name}} & Github: YourGithubID $|$ SlideShare: YourSlideShare \\
-  \href{http://changh95.github.io}{http://YourGithubID.github.io} & Email : \href{mailto:YourEmail@gmail.com}{YourEmail@gmail.com} \\
-  {} & Mobile : (+82) 010-Your-Phone
+  \textbf{\Large 김솔지}} &  \\
+  \href{https://github.com/so1gging}{Github} $|$ \href{https://www.linkedin.com/in/solzykim/}{LinkedIn} & Email : \href{mailto:YourEmail@gmail.com}{yzlosmik@gmail.com} \\
+  {} & Mobile : (+82) 010-4854-7484 \\
 \end{tabular*}
 
 %-----------Summary-----------------
-\section{Summary}
     \resumeSummary{
-    My main interest lies at [Your interest areas]. \\ 
-    My favourite applications are [Your favourite application areas] . \\ 
-    I am a [Your personality and traits].
-    }
+    안녕하세요, 6년 차 프론트엔드 개발자입니다. \\ 
+소통으로 더 나은 사용자 경험과 제품 완성도를 만드는 데 가치를 둡니다.\\ 팀원들과 함께 고민하고 성장하는 문화를 중요하게 생각합니다.}
 
 %-----------EXPERIENCE-----------------
-\section{Employment}
-  \resumeEmploymentListStart
-    \resumeEmployment
-      {[Company1]}{Seoul, South Korea}
-      {[Role1] (Full-time)}{Apr. 20XX - Present}
-        \resumeItemListStart
-            \resumeItem{[Role1] with \href{https://www.google.com}{\color{blue} [some Link]}.}
-            \resumeItem{[Role2].}
-            \resumeItem{[Role3].}
-        \resumeItemListEnd   
-        
-    \resumeEmployment
-      {[Company2]}{London, UK}
-      {[Role2] (Part-time)}{Oct. 20XX - Dec. 20XX}
-      \resumeItemListStart
-          \resumeItem{[Role1].}
-      \resumeItemListEnd
-      
-  \resumeEmploymentListEnd
+\section{경력}
+\resumeEmploymentListStart
 
-%-----------Projects-----------------
+\resumeEmployment
+  {알스퀘어}{2021.09 -- 재직중}
+  {분석 솔루션, 지도 기반 시각화, 백오피스 등 다양한 도메인의 프로젝트를 수행했습니다.}{}
+  \vspace{0.05em}\\
+  \textit {\small 테크리드로서 기술적 의사결정과 품질 관리를 주도한 경험이 있습니다.}
+  \vspace{0.05em}\\
+  \textit {\small PoC → 출시 → 운영까지 서비스 전 생명주기 경험했습니다.}
 
-\section{Projects}
-  \resumeSubHeadingListStart
-    \resumeProject
-      {[Major Project]}
-         {[Project Description].}
-         \resumeItemListStart
-             \resumeItem{[Major role] \\
-             \textbf{Key achievements}: \\ 
-             1. [Description1] \\
-             2. [Description2] \\
-             3. [Description3]}
-             \resumeItem{[Minor role1]}
-             \resumeItem{[Minor role2]}
-         \resumeItemListEnd
-    
-    \resumeProject
-      {[Project]}
-      {[Project Description]}
-      \resumeItemListStart
-        \resumeItem{[Role1]}
-        \resumeItem{[Role2]}
-        \resumeItem{[Role3]}
-    \resumeItemListEnd
-    
-    \resumeProject
-      {[Minor Project]}
-    {[Project Description]}
+% --- Project 1 ---
+\vspace{0.6em}
+{\normalsize{실거래 데이터 기반 분석 솔루션 - }\href{https://www.rsquare.co.kr/rsquare-analytics}{\color{blue} Rsquare Analytics}.}
+\hfill {\small 2025.08 -- 현재}
+\resumeItemListStart
+  \resumeItem{\textbf{인터랙션 개선}을 통해 서버 트래픽과 응답 지연 문제 완화}
+  \resumeItem{서버 상태 라이브러리를 활용해 \textbf{UX 응답성 개선}}
+  \resumeItem{\textbf{E2E 테스트 도입}으로 QA 자동화 및 배포 안정성 향상}
+  \resumeItem{\textbf{CI/CD 파이프라인 개선}으로 평균 배포 시간 50\% 이상 단축}
+\resumeItemListEnd
 
-  \resumeSubHeadingListEnd
+% --- Project 2 ---
+\vspace{0.6em}
+{\normalsize{사내 백오피스 서비스}}
+\hfill {\small 2024.07 -- 2025.07}
+\resumeItemListStart
+    \resumeItem{\textbf{프론트엔드 테크리드}로서 팀원 기술적 방향 제시 및 프로젝트 운영}
+    \resumeItem{React Query의 캐싱 전략을 활용해 불필요한 API 호출을 줄이고 응답 성능 개선}
+    \resumeItem{누적된 운영 업무의 70\% 이상을 해결하여 서비스 안정성과 사용자 만족도 향상}
+    \resumeItem{기존 E2E 테스트 환경 Playwright로 마이그레이션 및 속도 개선}
+\resumeItemListEnd
 
-%-----------Skills-----------------
+% --- Project 3 ---
+\vspace{0.6em}
+{\normalsize{지도 기반 데이터 시각화 서비스}}
+\hfill {\small 2021.12 -- 2024.07, 재참여}
+\resumeItemListStart
+    \resumeItem{신규 프로젝트 PoC부터 출시 전 과정 프론트엔드 개발 참여}
+    \resumeItem{JavaScript 기반 Naver Map API를 선언적으로 구현하여 \textbf{사내 라이브러리화}}
+    \resumeItem{canvas 기반 맵 레이어를 구현해 수만 건의 DOM 엘리먼트를 효율적으로 시각화하여 성능 개선}
+    \resumeItem{정적 분석 도구 SonarQube를 활용하여 버그를 사전식별하고 코드 품질을 향상 기여}
+\resumeItemListEnd
 
-\section{Skills}
-  \resumeSubHeadingListStart
-    \resumeSkills{\textbf{Programming} - [Programming language 1], [Programming language 2]}
-    \resumeSkills{\textbf{Frameworks} - [Framework 1], [Framework 2]}
-    \resumeSkills{\textbf{[Some skills]} - [Some skills1], [Some skills 2]}
-  \resumeSubHeadingListEnd
+% --- Project 4 ---
+\vspace{0.6em}
+{\normalsize{사내 프로젝트 개발 및 유지보수 담당}}
+\hfill {\small 2020.09 -- 2021.12}
+\resumeItemListStart
+    \resumeItem{웹/앱 화면 개발 및 api 개발}
+    \resumeItem{데스크탑과 모바일에 최적화된 반응형 개발}
+    \resumeItem{Android 기반 APP 유지보수}
+    \resumeItem{AWS SNS 서비스를 연동하여 글로벌 문자인증 서비스 제공}
+    \resumeItem{firebase notification service를 이용해 app 메세징 서비스 개발}
+\resumeItemListEnd
+
+\resumeEmploymentListEnd
 
 %-----------EDUCATION-----------------
-\section{Education}
+\section{교육}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {[Your Grad School]}{Seoul, South Korea}
-      {[Degree name] [Course name] [Grade]}{Mar. 20XX -- Dec. 20XX}
-      \resumeItemListStart
-          \resumeItem{[Subjects]}
-      \resumeItemListEnd
-    \resumeSubheading
-      {[Your University]}{Seoul, South Korea}
-      {[Degree name] [Course name] [Grade])}{Mar. 20XX -- Dec. 20XX}
-      \resumeItemListStart
-          \resumeItem{[Subjets]}
-      \resumeItemListEnd
-
+      {강남대학교}{Young-in, South Korea}
+      {컴퓨터공학과 학사}{2016.03 -- 2020.02}
   \resumeSubHeadingListEnd
-
-%-----------EXPERIENCE-----------------
-\section{Research Experiences}
-  \resumeSubHeadingListStart
-
-    \resumeResearch
-      {[Lab Name], [School name]}{Seoul, South Korea}
-      {[Position] (Advisor: [Name of Lab head])}{}{Jan. 20XX - Mar. 20XX}
-    \resumeResearch
-      {[Lab Name], [School name]}{Seoul, South Korea}
-      {[Position] (Advisor: [Name of Lab head])}{}{Jan. 20XX - Sept. 20XX}
-
-  \resumeSubHeadingListEnd
-
-%-----------Talks-----------------
-\section{Conference Talks}
-    \resumeSubHeadingListStart
-    
-        \resumeTalk{[Conference name]}{20XX}
-            \resumeItemListStart
-                \resumeItem{[Talk details]}
-            \resumeItemListEnd
-
-        \resumeTalk{[Conference name]}{20XX}
-            \resumeItemListStart
-                \resumeItem{[Talk details]}
-            \resumeItemListEnd
-
-    \resumeSubHeadingListEnd
     
 %-----------Papers-----------------
-\section{Papers}
+\section{자격}
     \resumeSubHeadingListStart
-        \resumeItem{[\textbf{Paper Name}] [Authors] [Journal Name] [Other citation details}
-        \resumeItem{[\textbf{Paper Name}] [Authors] [Journal Name] [Other citation details}
-        \resumeItem{[\textbf{Paper Name}] [Authors] [Journal Name] [Other citation details}
+        \resumeItem{\textbf{정보처리기사} 2019.11}
+        \resumeItem{\textbf{컴퓨터활용능력 1급} 2019.09}
     \resumeSubHeadingListEnd
 
-%-----------Community-----------------
-\section{Community}
-    \resumeSubHeadingListStart
-        \resumeCommunity{[Role]}{20XX -- Present}
-        {[Community Name]}
-        
-        \resumeCommunity{[Role]}{20XX -- Present}
-        {[Community Name]}
-        \resumeItemListStart
-            \resumeItem{[Some Event information]}
-            \resumeItem{[Some Group information}
-        \resumeItemListEnd    
+\newpage
 
-    \resumeSubHeadingListEnd
+%-----------자기소개서-----------------
+\section{자기소개서}
+
+안녕하세요. 6년 차 프론트엔드 개발자 김솔지입니다.
+
+\vspace{0.6em}
+
+2020년부터 프롭테크 기업에서 근무하며 상업용 부동산 데이터를 기반으로 한 다양한 프로젝트를 담당해 왔습니다.
+주로 지도 기반 데이터 시각화 서비스를 중심으로, 요구사항에 맞는 시스템을 설계하고 구현해 왔으며
+시각화 중심 프로젝트의 특성상 성능 최적화에도 지속적으로 관심을 가지고 문제를 주도적으로 해결해 왔습니다.
+또한 기본적인 CRUD API 및 쿼리 개발까지 경험하며, 프론트엔드와 백엔드 전반에 걸친 협업을 자연스럽게 익혔습니다.
+
+\vspace{0.6em}
+
+저는 프론트엔드 개발을 단순히 화면을 구성하는 작업이라고 생각하지 않습니다.
+프론트엔드는 사용자의 요구사항을 가장 빠르게 반영하고,
+서비스의 사용자 경험을 실질적으로 개선해 나가는 역할이라고 생각합니다.
+항상 사용자의 입장에서 고민하며 요구사항을 적극적으로 듣고 이해하고,
+더 나은 방향이 있다면 제안하는 개발자가 되기 위해 노력해 왔습니다.
+
+\vspace{0.6em}
+
+개발 과정에서 제가 가장 중요하게 생각하는 가치는 \textbf{협업}입니다.
+개인의 완성도보다는 팀원들과 함께 문제를 정의하고 해결해 나가는 과정을 중요하게 여기며,
+자유롭게 의견을 나눌 수 있는 소통 중심의 개발 문화를 선호합니다.
+이러한 가치관을 바탕으로 약 1년간 Tech Leader로서 여러 소규모 프로젝트를 리딩하며
+팀과 함께 성장하는 경험을 쌓아왔습니다.
+
+\vspace{0.6em}
+
+지금까지의 경험을 바탕으로,
+앞으로 함께할 동료들과 제품에 지속적으로 긍정적인 가치를 더할 수 있는 개발자가 되고자 합니다.
 
 %-------------------------------------------
 \end{document}
