--- a/Curriculum_Vitae_Template/resume.tex
+++ b/Curriculum_Vitae_Template/resume.tex
@@ -127,6 +127,12 @@
 \newcommand{\resumeItemListStart}{\begin{itemize}}
 \newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-5pt}}
 
+\newcommand{\projectDescription}[1]{
+  \vspace{-0.3em}
+  {\footnotesize\color{gray}#1}
+  \vspace{0.2em}
+}
+
 %-------------------------------------------
 %%%%%%  CV STARTS HERE  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -161,6 +167,10 @@
 \vspace{0.6em}
 {\normalsize{실거래 데이터 기반 분석 솔루션 - }\href{https://www.rsquare.co.kr/rsquare-analytics}{\color{blue} Rsquare Analytics}.}
 \hfill {\small 2025.08 -- 현재}
+\par
+\projectDescription{
+상업용 부동산 실거래 데이터를 기반으로 지표 분석과 인사이트 제공을 위한 웹 서비스
+}
 \resumeItemListStart
   \resumeItem{\textbf{인터랙션 개선}을 통해 서버 트래픽과 응답 지연 문제 완화}
   \resumeItem{서버 상태 라이브러리를 활용해 \textbf{UX 응답성 개선}}
@@ -172,6 +182,10 @@
 \vspace{0.6em}
 {\normalsize{사내 백오피스 서비스}}
 \hfill {\small 2024.07 -- 2025.07}
+\par
+\projectDescription{
+사내 운영 및 데이터 관리를 위한 관리자용 백오피스 웹 서비스
+}
 \resumeItemListStart
     \resumeItem{\textbf{프론트엔드 테크리드}로서 팀원 기술적 방향 제시 및 프로젝트 운영}
     \resumeItem{React Query의 캐싱 전략을 활용해 불필요한 API 호출을 줄이고 응답 성능 개선}
@@ -183,6 +197,10 @@
 \vspace{0.6em}
 {\normalsize{지도 기반 데이터 시각화 서비스}}
 \hfill {\small 2021.12 -- 2024.07, 재참여}
+\par
+\projectDescription{
+ 지도형 데이터 시각화를 위한 프로토타입 웹 서비스
+}
 \resumeItemListStart
     \resumeItem{신규 프로젝트 PoC부터 출시 전 과정 프론트엔드 개발 참여}
     \resumeItem{JavaScript 기반 Naver Map API를 선언적으로 구현하여 \textbf{사내 라이브러리화}}
@@ -194,6 +212,10 @@
 \vspace{0.6em}
 {\normalsize{사내 프로젝트 개발 및 유지보수 담당}}
 \hfill {\small 2020.09 -- 2021.12}
+\par
+\projectDescription{
+사내 다수의 웹·앱 프로젝트에 대한 기능 개발 및 유지보수 업무 수행
+}
 \resumeItemListStart
     \resumeItem{웹/앱 화면 개발 및 api 개발}
     \resumeItem{데스크탑과 모바일에 최적화된 반응형 개발}
