--- a/Curriculum_Vitae_Template/resume.tex
+++ b/Curriculum_Vitae_Template/resume.tex
@@ -20,6 +20,8 @@
 \usepackage{tabularx}
 \usepackage{amsmath}
 \usepackage{kotex} % Enable Korean!
+\usepackage{graphicx}
+\usepackage{tikz}
 
 \pagestyle{fancy}
 \fancyhf{} % clear all header and footer fields
@@ -133,6 +135,13 @@
   \vspace{0.2em}
 }
 
+\newcommand{\circlepic}[1]{
+  \begin{tikzpicture}
+    \clip (0,0) circle (1.5cm);
+    \node at (0,0) {\includegraphics[width=3.0cm]{#1}};
+  \end{tikzpicture}
+}
+
 %-------------------------------------------
 %%%%%%  CV STARTS HERE  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -141,9 +150,18 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{\Large 김솔지}} &  \\
-  \href{https://github.com/so1gging}{Github} $|$ \href{https://www.linkedin.com/in/solzykim/}{LinkedIn} & Email : \href{mailto:YourEmail@gmail.com}{yzlosmik@gmail.com} \\
-  {} & Mobile : (+82) 010-4854-7484 \\
+  \begin{minipage}{0.75\textwidth}
+    \textbf{\Large 김솔지} \\[4pt]
+    \href{https://github.com/so1gging}{Github} $|$ 
+    \href{https://www.linkedin.com/in/solzykim/}{LinkedIn} \\
+    Email : \href{mailto:yzlosmik@gmail.com}{yzlosmik@gmail.com} \\
+    Mobile : (+82) 010-4854-7484
+  \end{minipage}
+  &
+    \begin{minipage}{0.2\textwidth}
+      \centering
+      \circlepic{profile.jpeg}
+    \end{minipage}
 \end{tabular*}
 
 %-----------Summary-----------------
@@ -174,8 +192,8 @@
 \resumeItemListStart
   \resumeItem{\textbf{인터랙션 개선}을 통해 서버 트래픽과 응답 지연 문제 완화}
   \resumeItem{서버 상태 라이브러리를 활용해 \textbf{UX 응답성 개선}}
-  \resumeItem{\textbf{E2E 테스트 도입}으로 QA 자동화 및 배포 안정성 향상}
   \resumeItem{\textbf{CI/CD 파이프라인 개선}으로 평균 배포 시간 50\% 이상 단축}
+  \resumeItem{수동으로 운영되던 QA 체크리스트를 E2E 테스트로 자동화하여 배포 안정성 향상 기여}
 \resumeItemListEnd
 
 % --- Project 2 ---
@@ -190,7 +208,7 @@
     \resumeItem{\textbf{프론트엔드 테크리드}로서 팀원 기술적 방향 제시 및 프로젝트 운영}
     \resumeItem{React Query의 캐싱 전략을 활용해 불필요한 API 호출을 줄이고 응답 성능 개선}
     \resumeItem{누적된 운영 업무의 70\% 이상을 해결하여 서비스 안정성과 사용자 만족도 향상}
-    \resumeItem{기존 E2E 테스트 환경 Playwright로 마이그레이션 및 속도 개선}
+    \resumeItem{기존 \textbf{Cypress 기반 E2E 테스트를 Playwright로 마이그레이션}하여 테스트 속도 \textbf{70\% 이상} 개선}
 \resumeItemListEnd
 
 % --- Project 3 ---
